Changelog
=======================================================
07052012:
1, add chmod.sh to make chmod easier when needed
2, Stop The Development of testing-pythonize Branch
3, Remove HOW-TO as I will write tutorial soon
4, fix 'File name too long cause Notepad for Kindle will auto cut off extra words'
5, clean unused script
6, modify git.sh as I always forget to edit changelog

testing-variable:
1, arrange variable