@@ -1,6 +1,0 @@
-#!/mnt/us/python/bin/python2.6
-def notepad():
-## -----------Change it if different---------
-#def kindlenot():
-
-#def new
